--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
         </div>
       </section>
     </main>
-
+    <div class="arrow-up"> 
+      <img id="arrow-UP" src="./img/img_AA.png" alt="šipka nahorů">
+    </div>
     <footer><p class="footer-p">&copy; 2024 Kolegar s.r.o. Všechna práva vyhrazena.</p></footer>
+
     <script src="./dist/script.js"></script>
   </body>
 </html>
