--- a/index.html
+++ b/index.html
@@ -124,9 +124,20 @@
         </div>
       </section>
     </main>
+    <!--šipka nahorů-->
     <div class="arrow-up">
       <img id="arrow-UP" src="./img/img_AA.png" alt="šipka nahorů" />
     </div>
+    <!--Kontakt-->
+    <div id="My-info" class="contact"> 
+      <h2>Kontakt</h2>
+      <ul> 
+        <li><b>Tel:</b> +420 789 452 265</li>
+        <li><b>email:</b> dancek.kolegar@gmail.com</li>
+        <li><b>Facebook:</b><a href="#"> Facebook</a></li>
+      </ul>
+    </div>
+    <!--patička-->
     <footer>
       <p class="footer-p">
         &copy; 2024 Kolegar s.r.o. Všechna práva vyhrazena.
