--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
         <ul>
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
-          <li><a href="#" class="Kontact">Kontakt</a></li>
+          <li><a href="#" class="kontact">Kontakt</a></li>
         </ul> 
         
 
       </nav>
-      <div id="mode" class="Darkmode-div">
-        <input id="Dark" class="Darkmode-input" type="checkbox" />
-        <label id="labelkaDark" class="Darkmode-label" for="Dark">Dark Mode</label>
+      <div id="mode" class="darkmode-div">
+        <input id="Dark" class="darkmode-input" type="checkbox" />
+        <label id="labelkaDark" class="darkmode-label" for="Dark">Dark Mode</label>
       </div> 
       
       <!--hamburger-->
-      <div id="hamburger" class="Hamburger">
+      <div id="Hamburger" class="hamburger">
         <div class="piece"></div>
         <div class="piece"></div>
         <div class="piece"></div>
       </div> 
       <!--vyjížděcí menu-->
       <div id="second-nav-menu" class="mobile-nav-background"> 
-        <a class="mobile-nav-icon" href="#"><img id="Red-Cross" class="Cross-red" src="./img/cross.png" alt="Křížek"></a>
+        <a class="mobile-nav-icon" href="#"><img id="Red-Cross" class="cross-red" src="./img/cross.png" alt="Křížek"></a>
         <ul class="second-menu"> 
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
-          <li><a href="#" class="Kontact">Kontakt</a></li>
+          <li><a href="#" class="kontact">Kontakt</a></li>
         </ul>
       </div>
       <!--Konec Menu-->
@@ -107,7 +107,7 @@
               <div class="inputs">
                 <input
                   type="text"
-                  class="UsernameLog"
+                  class="usernameLog"
                   placeholder="Uživatelské jméno"
                 />
               </div>
@@ -128,7 +128,7 @@
               </div>
               <!--Tlačítko-->
               <div class="inputs">
-                <input type="submit" class="Log-in" id="Login"  value="Přihlásit" />
+                <input type="submit" class="log-in" id="Login"  value="Přihlásit" />
                 <p id="Check-pass" class="invalid none">Vaše hesla se neshodují !</p>
               </div>
             </form>
