--- a/index.html
+++ b/index.html
@@ -12,31 +12,39 @@
   </head>
   <body>
     <header>
-      <div id="navigation-one" class="pozadi-navigace"><!--pozadí navigace--></div>
+      <div id="navigation-one" class="pozadi-navigace">
+        <!--pozadí navigace-->
+      </div>
       <nav id="Menu">
         <ul>
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
           <li><a href="#" class="kontact">Kontakt</a></li>
-        </ul> 
-        
-
+        </ul>
       </nav>
       <div id="mode" class="darkmode-div">
         <input id="Dark" class="darkmode-input" type="checkbox" />
-        <label id="labelkaDark" class="darkmode-label" for="Dark">Dark Mode</label>
-      </div> 
-      
+        <label id="labelkaDark" class="darkmode-label" for="Dark"
+          >Dark Mode</label
+        >
+      </div>
+
       <!--hamburger-->
       <div id="Hamburger" class="hamburger">
         <div class="piece"></div>
         <div class="piece"></div>
         <div class="piece"></div>
-      </div> 
+      </div>
       <!--vyjížděcí menu-->
-      <div id="second-nav-menu" class="mobile-nav-background"> 
-        <a class="mobile-nav-icon" href="#"><img id="Red-Cross" class="cross-red" src="./img/cross.png" alt="Křížek"></a>
-        <ul class="second-menu"> 
+      <div id="second-nav-menu" class="mobile-nav-background">
+        <a class="mobile-nav-icon" href="#"
+          ><img
+            id="Red-Cross"
+            class="cross-red"
+            src="./img/cross.png"
+            alt="Křížek"
+        /></a>
+        <ul class="second-menu">
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
           <li><a href="#" class="kontact">Kontakt</a></li>
@@ -128,8 +136,15 @@
               </div>
               <!--Tlačítko-->
               <div class="inputs">
-                <input type="submit" class="log-in" id="Login"  value="Přihlásit" />
-                <p id="Check-pass" class="invalid none">Vaše hesla se neshodují !</p>
+                <input
+                  type="submit"
+                  class="log-in"
+                  id="Login"
+                  value="Přihlásit"
+                />
+                <p id="Check-pass" class="invalid none">
+                  Vaše hesla se neshodují !
+                </p>
               </div>
             </form>
           </div>
@@ -138,15 +153,22 @@
     </main>
     <!--šipka nahorů-->
     <div class="arrow-up">
-      <img id="arrow-UP" class="arrow-up-img" src="./img/img_AA.png" alt="šipka nahorů" />
+      <img
+        id="arrow-UP"
+        class="arrow-up-img"
+        src="./img/img_AA.png"
+        alt="šipka nahorů"
+      />
     </div>
     <!--Kontakt-->
-    <div id="My-info" class="contact"> 
+    <div id="My-info" class="contact">
       <h2>Kontakt</h2>
-      <ul> 
+      <ul>
         <li><b>Tel:</b> +420 789 452 265</li>
         <li><b>email:</b> dancek.kolegar@gmail.com</li>
-        <li><b>Facebook:</b><a class="facebook-anchor" href="#"> Facebook</a></li>
+        <li>
+          <b>Facebook:</b><a class="facebook-anchor" href="#"> Facebook</a>
+        </li>
       </ul>
     </div>
     <!--patička-->
