--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
   <body>
     <header>
       <div id="navigation-one" class="pozadi-navigace"><!--pozadí navigace--></div>
-      <nav id="Menu">
+      <nav id="Menu" class="main-menu">
         <ul>
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
           <li><a href="#" class="kontact">Kontakt</a></li>
-        </ul> 
-        
-
+        </ul>       
       </nav>
       <div id="mode" class="darkmode-div">
         <input id="Dark" class="darkmode-input" type="checkbox" />
@@ -33,7 +31,10 @@
         <div class="piece"></div>
         <div class="piece"></div>
       </div> 
-      <!--vyjížděcí menu-->
+      <!--vyjížděcí menu--> 
+      <nav class="mobile-background"> 
+        
+      </nav>
       <div id="second-nav-menu" class="mobile-nav-background"> 
         <a class="mobile-nav-icon" href="#"><img id="Red-Cross" class="cross-red" src="./img/cross.png" alt="Křížek"></a>
         <ul class="second-menu"> 
