--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   </head>
   <body>
     <header>
-      <div id="navigation-one" class="pozadi-navigace"><!--pozadí navigace--></div>
+      <!--pozadí navigace-->
+      <div id="navigation-one" class="pozadi-navigace"></div>
       <nav id="Menu">
         <ul>
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
           <li><a href="#" class="kontact">Kontakt</a></li>
-        </ul> 
-        
-
+        </ul>       
       </nav>
       <div id="mode" class="darkmode-div">
         <input id="Dark" class="darkmode-input" type="checkbox" />
