--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <!--pozadí navigace-->
       <div id="navigation-one" class="pozadi-navigace"></div>
-      <nav id="Menu">
+      <nav id="Menu" class="main-menu ">
         <ul>
           <li><a href="#" class="tvorba">Moje tvorba</a></li>
           <li><a href="#" class="o-me">O mě</a></li>
