--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <!--Discord: Daniel K, (KoliDJ)-->
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <!--Roboto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Roboto-->
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./queries/queries.css" />
+    <link rel="stylesheet" href="./queries/queries.css" /> 
+     <!--Favicona-->
+     <link rel="icon" type="image/png" href="./img/Favicon.png">
     <title>Komplexni stránka</title>
   </head>
   <body>
