--- a/index.html
+++ b/index.html
@@ -1,186 +1,209 @@
 <!DOCTYPE html>
 <html lang="cs">
-  <!--Daniel Kolegar-->
-  <!--dancek.kolegar@gmail.com-->
-  <!--Discord: Daniel K, (KoliDJ)-->
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-    <!--Roboto-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <!--Roboto-->
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./queries/queries.css" /> 
-     <!--Favicona-->
-     <link rel="icon" type="image/png" href="./img/Favicon.png">
-    <title>Komplexni stránka</title>
-  </head>
-  <body>
-    <header>
-      <!--pozadí navigace-->
-      <div id="navigation-one" class="pozadi-navigace"></div>
-      <nav id="Menu" class="main-menu ">
-        <ul>
-          <li><a href="#" class="tvorba">Moje tvorba</a></li>
-          <li><a href="#" class="o-me">O mě</a></li>
-          <li><a href="#" class="kontact">Kontakt</a></li>
-        </ul>       
-      </nav>
-      <div id="mode" class="darkmode-div">
-        <input id="Dark" class="darkmode-input" type="checkbox" />
-        <label id="labelkaDark" class="darkmode-label" for="Dark"
-          >Dark Mode</label
-        >
-      </div>
+    <!--Daniel Kolegar-->
+    <!--dancek.kolegar@gmail.com-->
+    <!--Discord: Daniel K, (KoliDJ)-->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!--Roboto-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <!--Roboto-->
+        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./queries/queries.css" />
+        <!--Favicona-->
+        <link rel="icon" type="image/png" href="./img/Favicon.png" />
+        <title>Komplexni stránka</title>
+    </head>
+    <body>
+        <header>
+            <!--pozadí navigace-->
+            <div id="navigation-one" class="pozadi-navigace"></div>
+            <nav id="Menu" class="main-menu">
+                <ul>
+                    <li><a href="#" class="tvorba">Moje tvorba</a></li>
+                    <li><a href="#" class="o-me">O mě</a></li>
+                    <li><a href="#" class="kontact">Kontakt</a></li>
+                    <li><a href="#" class="kontact">Registrace</a></li>
+                </ul>
+            </nav>
+            <div id="mode" class="darkmode-div">
+                <input id="Dark" class="darkmode-input" type="checkbox" />
+                <label id="labelkaDark" class="darkmode-label" for="Dark"
+                    >Dark Mode</label
+                >
+            </div>
 
-      <!--hamburger-->
-      <div id="Hamburger" class="hamburger">
-        <div class="piece"></div>
-        <div class="piece"></div>
-        <div class="piece"></div>
-      </div> 
-      <!--vyjížděcí menu-->
-      <div id="second-nav-menu" class="mobile-nav-background"> 
-        <a class="mobile-nav-icon" href="#"><img id="Red-Cross" class="cross-red" src="./img/cross.png" alt="Křížek"></a>
-        <ul class="second-menu"> 
-          <li><a href="#" class="tvorba">Moje tvorba</a></li>
-          <li><a href="#" class="o-me">O mě</a></li>
-          <li><a href="#" class="kontact">Kontakt</a></li>
-        </ul>
-      </div>
-      <!--Konec Menu-->
-      <h1 class="main">Vítejte na mém webu</h1>
-      <div class="welcoming">
-        <div class="welcoming-text">
-          <p>Vítejte na mém webu!</p>
-          <p>
-            Web je věnován mé fotografické tvorbě, kde sdílím svou vášeň pro
-            zachycování krásy přírody a jedinečných okamžiků. Najdete zde
-            galerie mých nejlepších prací, informace o nabízených službách a
-            možnost zakoupit mé fotografie.
-          </p>
-          <p>
-            Prozkoumejte mé portfolio, zjistěte více o mé práci a pokud vás něco
-            zaujme, neváhejte mě kontaktovat. Těším se na spolupráci a doufám,
-            že mé fotografie vám přinesou radost a inspiraci.
-          </p>
+            <!--hamburger-->
+            <div id="Hamburger" class="hamburger">
+                <div class="piece"></div>
+                <div class="piece"></div>
+                <div class="piece"></div>
+            </div>
+            <!--vyjížděcí menu-->
+            <div id="second-nav-menu" class="mobile-nav-background">
+                <a class="mobile-nav-icon" href="#"
+                    ><img
+                        id="Red-Cross"
+                        class="cross-red"
+                        src="./img/cross.png"
+                        alt="Křížek"
+                /></a>
+                <ul class="second-menu">
+                    <li><a href="#" class="tvorba">Moje tvorba</a></li>
+                    <li><a href="#" class="o-me">O mě</a></li>
+                    <li><a href="#" class="kontact">Kontakt</a></li>
+                    <li><a href="#" class="kontact">Registrace</a></li>
+                </ul>
+            </div>
+            <!--Konec Menu-->
+            <h1 class="main">Vítejte na mém webu</h1>
+            <div class="welcoming">
+                <div class="welcoming-text">
+                    <p>Vítejte na mém webu!</p>
+                    <p>
+                        Web je věnován mé fotografické tvorbě, kde sdílím svou
+                        vášeň pro zachycování krásy přírody a jedinečných
+                        okamžiků. Najdete zde galerie mých nejlepších prací,
+                        informace o nabízených službách a možnost zakoupit mé
+                        fotografie.
+                    </p>
+                    <p>
+                        Prozkoumejte mé portfolio, zjistěte více o mé práci a
+                        pokud vás něco zaujme, neváhejte mě kontaktovat. Těším
+                        se na spolupráci a doufám, že mé fotografie vám přinesou
+                        radost a inspiraci.
+                    </p>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <div class="section">
+                <h2>Ukázka mé umělecké práce</h2>
+                <section id="projekty" class="section-one">
+                    <div class="picture-gallery">
+                        <img
+                            src="./img/mountain-4242391_1280.jpg"
+                            alt="Hory a údolí"
+                        />
+                        <img src="./img/obr2.jpg" alt="opuštěná budova" />
+                        <img src="./img/obr5.jpg" alt="podzimní krajina" />
+                    </div>
+                </section>
+            </div>
+            <section id="about-me" class="section-two">
+                <div class="my-description">
+                    <h2>O mě</h2>
+                    <p class="block-text">
+                        Fotím přírodu, protože mě fascinuje její nekonečná krása
+                        a rozmanitost. Každý okamžik v přírodě je jedinečný a
+                        neopakovatelný, a právě tyto chvíle se snažím zachytit
+                        svým objektivem. Fotografie mi umožňuje sdílet tyto
+                        kouzelné momenty s ostatními a přinášet jim radost a
+                        inspiraci. Příroda je pro mě nekonečným zdrojem klidu a
+                        inspirace, a doufám, že mé fotografie vám přinesou
+                        stejný pocit.
+                    </p>
+                    <p class="block-text">
+                        Kromě toho nabízím své fotografie k prodeji a poskytují
+                        fotografické služby na zakázku. Specializuji se na
+                        portréty, fotografie interiérů a také na fotografie pro
+                        průkazy. Pokud máte zájem o mé fotografie nebo
+                        potřebujete profesionálního fotografa pro váš projekt,
+                        neváhejte mě kontaktovat. Rád vám pomohu zachytit ty
+                        nejkrásnější okamžiky.
+                    </p>
+                    <p class="block-text">
+                        Pro registrované uživatele na mém webu nabízím speciální
+                        slevy a také kurzy focení, kde se můžete naučit, jak
+                        zachytit krásu přírody svým vlastním objektivem.
+                        Připojte se k naší komunitě a objevte svět fotografie s
+                        námi!
+                    </p>
+                </div>
+
+                <div id="Formular-div" class="login-section">
+                    <div class="fomular">
+                        <h2>Přihlásit se</h2>
+                        <form class="login-format" action="">
+                            <div class="inputs">
+                                <input
+                                    type="text"
+                                    class="usernameLog"
+                                    id="Username"
+                                    placeholder="Uživatelské jméno"
+                                    required
+                                />
+                            </div>
+
+                            <div class="inputs">
+                                <input
+                                    type="password"
+                                    name="passwordOne"
+                                    id="password1"
+                                    placeholder="Zadejte heslo"
+                                    required
+                                />
+                                <input
+                                    type="password"
+                                    name="passwordtwo"
+                                    id="password2"
+                                    placeholder="Zadejte heslo pro potvrzení"
+                                    required
+                                />
+                            </div>
+                            <!--Tlačítko-->
+                            <div class="inputs">
+                                <input
+                                    type="submit"
+                                    class="log-in"
+                                    id="Login"
+                                    value="Přihlásit"
+                                />
+                                <p id="Check-pass" class="invalid none">
+                                    Vaše hesla se neshodují !
+                                </p>
+                                <p id="Check-name" class="none">Zadejte uživatelské jméno !</p>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!--šipka nahorů-->
+        <div class="arrow-up">
+            <img
+                id="arrow-UP"
+                class="arrow-up-img"
+                src="./img/img_AA.png"
+                alt="šipka nahorů"
+            />
         </div>
-      </div>
-    </header>
-
-    <main>
-      <div class="section">
-        <h2>Ukázka mé umělecké práce</h2>
-        <section id="projekty" class="section-one">
-          <div class="picture-gallery">
-            <img src="./img/mountain-4242391_1280.jpg" alt="Hory a údolí" />
-            <img src="./img/obr2.jpg" alt="opuštěná budova" />
-            <img src="./img/obr5.jpg" alt="podzimní krajina" />
-          </div>
-        </section>
-      </div>
-      <section id="about-me" class="section-two">
-        <div class="my-description">
-          <h2>O mě</h2>
-          <p class="block-text">
-            Fotím přírodu, protože mě fascinuje její nekonečná krása a
-            rozmanitost. Každý okamžik v přírodě je jedinečný a neopakovatelný,
-            a právě tyto chvíle se snažím zachytit svým objektivem. Fotografie
-            mi umožňuje sdílet tyto kouzelné momenty s ostatními a přinášet jim
-            radost a inspiraci. Příroda je pro mě nekonečným zdrojem klidu a
-            inspirace, a doufám, že mé fotografie vám přinesou stejný pocit.
-          </p>
-          <p class="block-text">
-            Kromě toho nabízím své fotografie k prodeji a poskytují fotografické
-            služby na zakázku. Specializuji se na portréty, fotografie interiérů
-            a také na fotografie pro průkazy. Pokud máte zájem o mé fotografie
-            nebo potřebujete profesionálního fotografa pro váš projekt,
-            neváhejte mě kontaktovat. Rád vám pomohu zachytit ty nejkrásnější
-            okamžiky.
-          </p>
-          <p class="block-text">
-            Pro registrované uživatele na mém webu nabízím speciální slevy a
-            také kurzy focení, kde se můžete naučit, jak zachytit krásu přírody
-            svým vlastním objektivem. Připojte se k naší komunitě a objevte svět
-            fotografie s námi!
-          </p>
+        <!--Kontakt-->
+        <div id="My-info" class="contact">
+            <h2>Kontakt</h2>
+            <ul>
+                <li><b>Tel:</b> +420 789 452 265</li>
+                <li><b>email:</b> dancek.kolegar@gmail.com</li>
+                <li>
+                    <b>Facebook:</b
+                    ><a class="facebook-anchor" href="#"> Facebook</a>
+                </li>
+            </ul>
         </div>
+        <!--patička-->
+        <footer>
+            <p class="footer-p">
+                &copy; 2024 Kolegar s.r.o. Všechna práva vyhrazena.
+            </p>
+        </footer>
 
-        <div id="Formular-div" class="login-section">
-          <div class="fomular">
-            <h2>Přihlásit se</h2>
-            <form class="login-format" action="">
-              <div class="inputs">
-                <input
-                  type="text"
-                  class="usernameLog"
-                  placeholder="Uživatelské jméno"
-                />
-              </div>
-
-              <div class="inputs">
-                <input
-                  type="password"
-                  name="passwordOne"
-                  id="password1"
-                  placeholder="Zadejte heslo"
-                />
-                <input
-                  type="password"
-                  name="passwordtwo"
-                  id="password2"
-                  placeholder="Zadejte heslo pro potvrzení"
-                />
-              </div>
-              <!--Tlačítko-->
-              <div class="inputs">
-                <input
-                  type="submit"
-                  class="log-in"
-                  id="Login"
-                  value="Přihlásit"
-                />
-                <p id="Check-pass" class="invalid none">
-                  Vaše hesla se neshodují !
-                </p>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-    </main>
-    <!--šipka nahorů-->
-    <div class="arrow-up">
-      <img
-        id="arrow-UP"
-        class="arrow-up-img"
-        src="./img/img_AA.png"
-        alt="šipka nahorů"
-      />
-    </div>
-    <!--Kontakt-->
-    <div id="My-info" class="contact">
-      <h2>Kontakt</h2>
-      <ul>
-        <li><b>Tel:</b> +420 789 452 265</li>
-        <li><b>email:</b> dancek.kolegar@gmail.com</li>
-        <li>
-          <b>Facebook:</b><a class="facebook-anchor" href="#"> Facebook</a>
-        </li>
-      </ul>
-    </div>
-    <!--patička-->
-    <footer>
-      <p class="footer-p">
-        &copy; 2024 Kolegar s.r.o. Všechna práva vyhrazena.
-      </p>
-    </footer>
-
-    <script src="./dist/script.js"></script>
-  </body>
+        <script src="./dist/script.js"></script>
+    </body>
 </html>
