--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <title>Komplexni stránka</title>
     </head>
     <body>
-        <header>
+        <header> 
+          <!--Scroling smajlik--> 
+          <img
+                src="./img/smile.png"
+                alt="Rotující smajlík"
+                id="Scroll"
+                class="scroll-image"
+            />
             <!--pozadí navigace-->
             <div id="navigation-one" class="pozadi-navigace"></div>
             <nav id="Menu" class="main-menu">
