--- a/index.html
+++ b/index.html
@@ -178,14 +178,16 @@
                                 </p>
                                 <p id="Check-name" class="none">
                                     Zadejte uživatelské jméno !
-                                </p> 
-                                <p id="Check-pass-val" class="none">Zadejte heslo !</p>
+                                </p>
+                                <p id="Check-pass-val" class="none">
+                                    Zadejte heslo !
+                                </p>
                                 <p id="Warning" class="check-warning none">
                                     Varování! Caps lock je ZAPNUTÝ
                                 </p>
                             </div>
                         </form>
-                    </div> 
+                    </div>
                     <div id="Loader" class="loader"></div>
                 </div>
             </section>
